# core

./: .gitignore  Cargo.toml  askama.toml  docker-compose.yml  package-lock.json  package.json  rsbuild.config.mjs  tailwind.config.js
account_service/: Cargo.toml  readme.md
account_service/src/: apps.rs  hosts.rs  libs.rs  main.rs
account_service/src/handlers/: fallback.rs
iam_service/: .env  .gitignore  Cargo.toml  askama.toml  package.json  pnpm-lock.yaml  readme.md  rsbuild.config.mjs  tailwind.config.js  Взаимодействия.md  Описание IAM сервиса.md  Рекомендованные_практики_для_безопасности.md
iam_service/migrations/: 20240902212412_init.down.sql  20240902212412_init.up.sql
iam_service/src/: apps.rs  main.rs
iam_service/src/application/services/: account_service.rs
iam_service/src/configuration/: configuration.rs  mod.rs
iam_service/src/domain/: mod.rs
iam_service/src/domain/entities/: account.rs
iam_service/src/domain/repositories/: account_repository.rs  mod.rs
iam_service/src/domain/use_cases/: create_account.rs  find_account.rs  mod.rs  read_account.rs
iam_service/src/handlers/: fallback.rs
iam_service/src/infrastructure/: mod.rs
iam_service/src/infrastructure/db/: connections.rs  mod.rs
iam_service/src/infrastructure/db/repositories/: mod.rs  postgres_account_repository.rs
iam_service/src/infrastructure/http/: middlewares.rs  mod.rs  routes.rs  servers.rs
iam_service/src/infrastructure/web/: middlewares.rs  mod.rs  routes.rs  utils.rs
iam_service/src/presentation/controllers/: account_controller.rs  contacts_controller.rs  index_controller.rs  mod.rs  register_controller.rs  session_controller.rs
iam_service/src/presentation/views/: main.js  template.html
iam_service/src/presentation/views/pages/: mod.rs
iam_service/src/presentation/views/pages/contacts/: mod.rs  page.html
iam_service/src/presentation/views/pages/index/: index.html  mod.rs  page.html
iam_service/src/presentation/views/pages/register/: index.html  mod.rs
src/: main.rs
web/: index.html  index.js
web/components/componentA/: index.html
web/components/componentB/: index.html
