[package]
name = "core"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-files = "0.6"
askama = "0.12"
askama_actix = "0.14"
tracing = { version = "0.1" }
tracing-log = "0.2"
tracing-subscriber = { version = "0.3", features = [
    "registry",
    "env-filter",
    "parking_lot",
] }
tracing-actix-web = { version = "0.7.2", features = [
    "uuid_v7",
] }