[package]
name = "account_service"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["tracing"] }
listenfd = "1.0.1"
tokio = { version = "1.39.3", features = ["full"] }
tower = "0.5.0"
tower-http = { version = "0.5.2", features = ["trace", "compression-full", "timeout"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
metrics = { version = "0.23.0", default-features = false }
metrics-exporter-prometheus = { version = "0.15.3", default-features = false }