[package]
name = "iam_service"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["tracing", "json"] }
listenfd = "1.0.1"
tokio = { version = "1.39.3", features = ["full"] }
tower = "0.5.0"
tower-http = { version = "0.5.2", features = ["trace", "compression-full", "timeout", "fs"] }
tracing = {version = "0.1.40", features = ["attributes"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "parking_lot", "json"] }
metrics = { version = "0.23.0", default-features = false }
metrics-exporter-prometheus = { version = "0.15.3", default-features = false }
anyhow = "1.0.86"
dotenvy = "0.15.7"
sqlx = { version = "0.8.1", features = ["runtime-tokio","postgres", "macros", "uuid", "json"] }
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
uuid = { version = "1.10.0", features = ["v4", "serde"] }
askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = "0.4.0"
tower-sessions = "0.13.0"
